@@ -1,3 +1,5 @@
+* Prevent Hash#toQueryString from serializing objects. [kangax, Tobie Langel]
+
 * Fix Event#pointer in IE strict and quirks mode. Closes #9920. [ephogy, kangax, Tobie Langel]
 
 * Refactor String#escapeHTML to avoid using the `with` statement. [Tobie Langel]
